<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/rgLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation">

                <RadioButton
                    android:id="@+id/rbManual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/typed" />

                <RadioButton
                    android:id="@+id/rbCurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/current" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgLocation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine"
                    android:maxLength="250" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnFetchDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/fetch_details"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilLocation" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rlWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnFetchDetails">

                <TextView
                    android:id="@+id/tvTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_48ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSymbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/cel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintStart_toEndOf="@+id/tvTemp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWeather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSymbol"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/tvTemp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/tvTemp"
                    app:layout_constraintTop_toBottomOf="@+id/tvSymbol" />

                <TextView
                    android:id="@+id/tvWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSymbol"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/tvTemp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSymbol"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/tvTemp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvSymbol"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_toEndOf="@+id/tvTemp"
                    android:textColor="@color/red"
                    android:gravity="center"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWind" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvWind" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>